# cse493s-spring26-hw1

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  generate_grok_data.py  inference.py  model.py  part_0_1_contract.py  part_2.ipynb  part_2.py  part_2_plots_sequential.ipynb  part_2_starter.ipynb  pyproject.toml  results_df_sequential_1024.csv  train.py  utils.py
conf/: sanitycheck.yaml
data/: 1.2_add_p97_test_noanswer.txt  1.3_div_p97_test_noanswer.txt  sanitycheck.txt  sanitycheck_noanswer.txt
results/: results_df_greedy_32000_no_think.csv  results_df_greedy_32000_think.csv  results_df_parallel_1.csv  results_df_parallel_2.csv  results_df_parallel_3.csv  results_df_parallel_4.csv  results_df_parallel_5.csv  results_df_parallel_6.csv  results_df_parallel_7.csv  results_df_parallel_8.csv  results_df_repetition_32000_no_think.csv  results_df_sequential_16000.csv  results_df_sequential_2000.csv  results_df_sequential_28000.csv  results_df_sequential_32000.csv  results_df_sequential_4000.csv  results_df_sequential_8000.csv  results_df_strat1_16000_1.csv  results_df_strat1_16000_2.csv  results_df_strat1_16000_3.csv  results_df_strat1_16000_4.csv  results_df_strat1_32000_1.csv  results_df_strat1_32000_2.csv  results_df_strat1_32000_3.csv  results_df_strat1_32000_4.csv  results_df_strat1_32000_5.csv  results_df_strat1_32000_6.csv  results_df_strat1_32000_7.csv  results_df_strat1_32000_8.csv  results_df_strat2_16000_1.csv  results_df_strat2_16000_2.csv  results_df_strat2_16000_3.csv  results_df_strat2_16000_4.csv  results_df_strat2_32000_1.csv  (+5 more)
(+169 files in other folders)
