[project]
name = "cse493s-spring26-hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
]
